--- a/XcapeApp/src/interfaz/IntGraficaMenu.form
+++ b/XcapeApp/src/interfaz/IntGraficaMenu.form
@@ -373,7 +373,7 @@
               <Font name="Lucida Grande" size="18" style="0"/>
             </Property>
             <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="&quot;Bienvenido, &quot; +user.getCorreo()+ &quot;!&quot;" type="code"/>
+              <Connection code="&quot;Bienvenido, &quot; +user.getNombre()+ &quot;!&quot;" type="code"/>
             </Property>
           </Properties>
           <AuxValues>
